# data-interval

./: .gitignore  .travis.yml  .travis.yml.patch  CHANGELOG.markdown  README.md  appveyor.yml  cabal.haskell-ci  data-interval.cabal  stack-8.10.7.yaml  stack-ghc-8.2.yaml  stack.yaml
.github/workflows/: build.yaml  coverage.yaml
bench/: BenchInterval.hs  BenchIntervalSet.hs  Main.hs
src/Data/: IntegerInterval.hs  Interval.hs  IntervalMap.hs  IntervalRelation.hs  IntervalSet.hs  OldIntervalSet.hs  RealFloatInterval.hs
src/Data/IntegerInterval/: Internal.hs
src/Data/Interval/: Internal.hs
src/Data/IntervalMap/: Base.hs  Lazy.hs  Strict.hs
test/: TestInstances.hs  TestIntegerInterval.hs  TestInterval.hs  TestIntervalMap.hs  TestIntervalRelation.hs  TestIntervalSet.hs  TestSuite.hs
