Name:		data-interval
Version:	1.3.0
License:	BSD3
License-File:	COPYING
Author:		Masahiro Sakai (masahiro.sakai@gmail.com)
Maintainer:	masahiro.sakai@gmail.com
Category:	Data, Math
Cabal-Version:	>= 1.10
Synopsis:	Interval arithmetic for both open and closed intervals
Description:
   Interval datatype and interval arithmetic for Haskell.
   Unlike the intervals package (<http://hackage.haskell.org/package/intervals>),
   this package provides both open and closed intervals and is intended to be used
   with exact number types such as Rational and Integer.
Bug-Reports:	https://github.com/msakai/data-interval/issues
Extra-Source-Files:
   README.md
   COPYING
   CHANGELOG.markdown
   .travis.yml
Build-Type: Simple

source-repository head
  type:     git
  location: git://github.com/msakai/data-interval.git

Library
  Hs-source-dirs: src
  Build-Depends:
       base >=4 && <5
     , containers
     , lattices >=1.2.1.1
     , deepseq
     , hashable >=1.1.2.5 && <1.3
     , extended-reals >=0.2 && <1.0
  Default-Language: Haskell2010
  Other-Extensions:
     CPP
     ScopedTypeVariables
     TypeFamilies
     DeriveDataTypeable
  Exposed-Modules:
     Data.Interval
     Data.IntervalMap
     Data.IntervalSet
     Data.IntegerInterval

Test-suite test-interval
  Type:              exitcode-stdio-1.0
  HS-Source-Dirs:    test
  Main-is:           TestSuite.hs
  Other-Modules:     TestInterval, TestIntervalMap, TestIntervalSet, TestIntegerInterval
  Build-depends:
       base >=4 && <5
     , containers
     , lattices
     , deepseq
     , data-interval
     , tasty >=0.10.1
     , tasty-hunit ==0.9.*
     , tasty-quickcheck ==0.8.*
     , tasty-th
     , HUnit
     , QuickCheck >=2.5 && <3
  Default-Language: Haskell2010
  Other-Extensions:
     TemplateHaskell
     ScopedTypeVariables
