Name:		data-interval
Version:	2.0.0
License:	BSD3
License-File:	COPYING
Author:		Masahiro Sakai (masahiro.sakai@gmail.com)
Maintainer:	masahiro.sakai@gmail.com
Category:	Data, Math
Cabal-Version:	>= 1.10
Synopsis:	Interval datatype, interval arithmetic and interval-based containers
Description:
   Interval datatype, interval arithmetic and interval-based containers for Haskell.
   Unlike the intervals package (<http://hackage.haskell.org/package/intervals>),
   this package provides both open and closed intervals and is intended to be used
   with exact number types such as Rational and Integer.
Bug-Reports:	https://github.com/msakai/data-interval/issues
Extra-Source-Files:
   README.md
   COPYING
   CHANGELOG.markdown
Build-Type: Simple
Tested-With:
   GHC ==7.8.4
   GHC ==7.10.3
   GHC ==8.0.2
   GHC ==8.2.2
   GHC ==8.4.4
   GHC ==8.6.4

source-repository head
  type:     git
  location: git://github.com/msakai/data-interval.git

Library
  Hs-source-dirs: src
  Build-Depends:
       base >=4 && <5
     , containers
     , lattices >=1.2.1.1 && <2.1
     , deepseq
     , hashable >=1.1.2.5 && <1.4
     , extended-reals >=0.2 && <1.0
  if impl(ghc <8.0)
    Build-depends:
      semigroups
  Default-Language: Haskell2010
  Other-Extensions:
     CPP
     ScopedTypeVariables
     TypeFamilies
     DeriveDataTypeable
     DeriveGeneric
     LambdaCase
     MultiWayIf
     Safe
  Exposed-Modules:
     Data.Interval
     Data.IntervalMap.Lazy
     Data.IntervalMap.Strict
     Data.IntervalSet
     Data.IntegerInterval
  Other-Modules:
     Data.Interval.Internal
     Data.IntegerInterval.Internal
     Data.IntervalMap.Base

Test-suite test-interval
  Type:              exitcode-stdio-1.0
  HS-Source-Dirs:    test
  Main-is:           TestSuite.hs
  Other-Modules:     TestInterval, TestIntervalMap, TestIntervalSet, TestIntegerInterval
  Build-depends:
       base >=4 && <5
     , ChasingBottoms
     , containers
     , lattices
     , deepseq
     , hashable
     , data-interval
     , syb
     , tasty >=0.10.1
     , tasty-hunit >=0.9 && <0.11
     , tasty-quickcheck >=0.8 && <0.11
     , tasty-th
     , HUnit
     , QuickCheck >=2.5 && <3
  if impl(ghc <8.0)
    Build-depends:
      semigroups
  if impl(ghc <7.10)
    Build-depends:
      transformers >=0.2
  Default-Language: Haskell2010
  Other-Extensions:
     TemplateHaskell
     ScopedTypeVariables
