Name:		data-interval
Version:	2.1.2
License:	BSD3
License-File:	COPYING
Author:		Masahiro Sakai (masahiro.sakai@gmail.com)
Maintainer:	masahiro.sakai@gmail.com
Category:	Data, Math
Cabal-Version:	2.0
Synopsis:	Interval datatype, interval arithmetic and interval-based containers
Description:
   Interval datatype, interval arithmetic and interval-based containers for Haskell.
   Unlike the intervals package (<http://hackage.haskell.org/package/intervals>),
   this package provides both open and closed intervals and is intended to be used
   with exact number types such as Rational and Integer.
Bug-Reports:	https://github.com/msakai/data-interval/issues
Extra-Doc-Files:
   README.md
   CHANGELOG.markdown
Build-Type: Simple
Tested-With:
   GHC ==8.2.2
   GHC ==8.4.4
   GHC ==8.6.5
   GHC ==8.8.4
   GHC ==8.10.7
   GHC ==9.0.2
   GHC ==9.2.8
   GHC ==9.4.7
   GHC ==9.6.2
   GHC ==9.8.1

source-repository head
  type:     git
  location: https://github.com/msakai/data-interval

flag lattices
  description: Derive lattice instances
  default: True

Library
  Hs-source-dirs: src
  Build-Depends:
       base >=4.10 && <5
     , containers >= 0.5.8 && < 0.8
     , deepseq < 1.6
     , hashable >=1.1.2.5 && <1.6
     , extended-reals >=0.2 && <1.0
  if flag(lattices)
    build-depends:
     lattices >=2 && <2.3
  Default-Language: Haskell2010
  Other-Extensions:
     ScopedTypeVariables
     TypeFamilies
     DeriveDataTypeable
     DeriveGeneric
     LambdaCase
     MultiWayIf
     Safe
  Exposed-Modules:
     Data.Interval
     Data.IntervalMap.Lazy
     Data.IntervalMap.Strict
     Data.IntervalRelation
     Data.IntervalSet
     Data.IntegerInterval
  Other-Modules:
     Data.Interval.Internal
     Data.IntegerInterval.Internal
     Data.IntervalMap.Base
     Data.OldIntervalSet

Test-suite test-interval
  Type:              exitcode-stdio-1.0
  HS-Source-Dirs:    test
  Main-is:           TestSuite.hs
  Other-Modules:
     TestInterval
     TestIntervalMap
     TestIntervalRelation
     TestIntervalSet
     TestIntegerInterval
     TestInstances
  Build-depends:
       base >=4 && <5
     , ChasingBottoms
     , containers
     , deepseq
     , hashable
     , data-interval
     , syb
     , tasty >=0.10.1
     , tasty-hunit >=0.9 && <0.11
     , tasty-quickcheck >=0.8.1 && <0.11
     , tasty-th
     , HUnit
     , QuickCheck >=2.5 && <3
     , quickcheck-classes-base
  if flag(lattices)
    build-depends:
     lattices
  Default-Language: Haskell2010
  Other-Extensions:
     TemplateHaskell
     ScopedTypeVariables
